--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
+    "lint": "eslint .",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/eslint": "^0.7.1",
     "@picocss/pico": "^2.0.6",
     "nuxt": "^3.14.159",
     "valibot": "1.0.0-beta.7",
@@ -19,6 +21,7 @@
   "packageManager": "pnpm@9.13.2+sha512.88c9c3864450350e65a33587ab801acf946d7c814ed1134da4a924f6df5a2120fd36b46aab68f7cd1d413149112d53c7db3a4136624cfd00ff1846a0c6cef48a",
   "devDependencies": {
     "nuxt-auth-utils": "^0.5.5",
-    "nuxt-tiptap-editor": "^2.0.0"
+    "nuxt-tiptap-editor": "^2.0.0",
+    "typescript": "^5.6.3"
   }
 }
